# Sauron

./: .gitignore  CMakeLists.txt  README.md
ConceptValidation/SkyRenderer/: CMakeLists.txt
ConceptValidation/SkyRenderer/App/: CMakeLists.txt  Main.cpp
ConceptValidation/SkyRenderer/Core/: CMakeLists.txt
ConceptValidation/SkyRenderer/Core/Include/Sauron/: Context.hpp  Core.hpp  DrawEntity.hpp  ErrorHandling.hpp  GraphicsSystem.hpp  Location.hpp  LocationManager.hpp  Module.hpp  ModuleManager.hpp  Observer.hpp  Painter.hpp  Projector.hpp  RefractionExtinction.hpp  SkyDrawer.hpp  Texture.hpp  Util.hpp
ConceptValidation/SkyRenderer/Core/Src/: Context.cpp  Core.cpp  ErrorHandling.cpp  GraphicsSystem.cpp  Location.cpp  LocationManager.cpp  ModuleManager.cpp  Observer.cpp  Painter.cpp  Projector.cpp  RefractionExtinction.cpp  SkyDrawer.cpp  Texture.cpp  Util.cpp
ConceptValidation/SkyRenderer/Core/Src/Modules/: MilkyWay.cpp  MilkyWay.hpp  Planet.cpp  Planet.hpp  SolarSystem.cpp  SolarSystem.hpp
ConceptValidation/SkyRenderer/Core/Src/PlanetsEphems/: EphemWrapper.cpp  de430.cpp  de431.cpp  elp82b.c  gust86.c  jpl_int.h  jpleph.cpp  jpleph.h  marssat.c  precession.c  precession.h  tass17.c  vsop87.c
cmake/: Common.cmake  Compiler.cmake  FindGLES.cmake  Platform.cmake  VisualStudio2010UserFile.vcxproj.user.in
