SET(EXE_NAME "SkyRendererApp")

SET(SAURON_SKY_RENDERER_DIR "${SAURON_ROOT_DIR}/ConceptValidation/SkyRenderer")
SET(SAURON_SKY_RENDERER_BIN_DIR "${SAURON_SKY_RENDERER_DIR}/Bin/${SAURON_PLATFORM_NAME}")
SET(SAURON_SKY_RENDERER_OUTPUT_DIR "${SAURON_SKY_RENDERER_DIR}/Lib/${SAURON_PLATFORM_NAME}")

SET(APP_SOURCE_FILES
	${SAURON_SKY_RENDERER_DIR}/App/Main.cpp
)

SOURCE_GROUP("Source Files" FILES ${APP_SOURCE_FILES})
SOURCE_GROUP("Header Files" FILES ${APP_HEADER_FILES})

ADD_DEFINITIONS(-D_USE_MATH_DEFINES)
IF(CMAKE_C_COMPILER_ID MATCHES MSVC)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4201")
ENDIF()

INCLUDE_DIRECTORIES(${SAURON_ROOT_DIR}/External/glm)
INCLUDE_DIRECTORIES(${SAURON_ROOT_DIR}/External/boost)
INCLUDE_DIRECTORIES(${SAURON_ROOT_DIR}/External/angle/include)
INCLUDE_DIRECTORIES(${SAURON_SKY_RENDERER_DIR}/Core/Include)
LINK_DIRECTORIES(${SAURON_ROOT_DIR}/External/angle/lib/${SAURON_PLATFORM_NAME})
LINK_DIRECTORIES(${SAURON_SKY_RENDERER_DIR}/Lib/${SAURON_PLATFORM_NAME})
ADD_EXECUTABLE(${EXE_NAME}
	${APP_SOURCE_FILES} ${APP_HEADER_FILES}
)

ADD_DEPENDENCIES(${EXE_NAME} SkyRendererCore)

SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES
	PROJECT_LABEL ${EXE_NAME}
	DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX}
	OUTPUT_NAME ${EXE_NAME}${SAURON_OUTPUT_SUFFIX}
	RUNTIME_OUTPUT_DIRECTORY ${SAURON_SKY_RENDERER_BIN_DIR}
	RUNTIME_OUTPUT_DIRECTORY_DEBUG ${SAURON_SKY_RENDERER_BIN_DIR}
	RUNTIME_OUTPUT_DIRECTORY_RELEASE ${SAURON_SKY_RENDERER_BIN_DIR}
	RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${SAURON_SKY_RENDERER_BIN_DIR}
	RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${SAURON_SKY_RENDERER_BIN_DIR}
)

TARGET_LINK_LIBRARIES(${EXE_NAME}
	debug SkyRendererCore${SAURON_OUTPUT_SUFFIX}_d optimized SkyRendererCore${SAURON_OUTPUT_SUFFIX}
	libGLESv2 libEGL
)

CREATE_PROJECT_USERFILE(Sauron ${EXE_NAME} ${SAURON_SKY_RENDERER_BIN_DIR})

SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES FOLDER "ConceptValidation/SkyRenderer")
