SET(LIB_NAME "SkyRendererCore")

SET(SAURON_SKY_RENDERER_DIR "${SAURON_ROOT_DIR}/ConceptValidation/SkyRenderer")
SET(SAURON_SKY_RENDERER_OUTPUT_DIR "${SAURON_SKY_RENDERER_DIR}/Lib/${SAURON_PLATFORM_NAME}")

SET(CORE_HEADER_FILES
	${SAURON_SKY_RENDERER_DIR}/Core/Include/Sauron/Context.hpp
	${SAURON_SKY_RENDERER_DIR}/Core/Include/Sauron/Core.hpp
	${SAURON_SKY_RENDERER_DIR}/Core/Include/Sauron/Location.hpp
	${SAURON_SKY_RENDERER_DIR}/Core/Include/Sauron/LocationManager.hpp
)
SET(CORE_SOURCE_FILES
	${SAURON_SKY_RENDERER_DIR}/Core/Src/Context.cpp
	${SAURON_SKY_RENDERER_DIR}/Core/Src/Core.cpp
	${SAURON_SKY_RENDERER_DIR}/Core/Src/LocationManager.cpp
)

SOURCE_GROUP("Core\\Source Files" FILES ${CORE_SOURCE_FILES})
SOURCE_GROUP("Core\\Header Files" FILES ${CORE_HEADER_FILES})

ADD_DEFINITIONS(-DSAURON_SKY_RENDERER_CORE_SOURCE)
ADD_DEFINITIONS(-D_USE_MATH_DEFINES)

INCLUDE_DIRECTORIES(${SAURON_ROOT_DIR}/External/glm)
INCLUDE_DIRECTORIES(${SAURON_ROOT_DIR}/External/boost)
INCLUDE_DIRECTORIES(${SAURON_SKY_RENDERER_DIR}/Core/Include)
ADD_LIBRARY(${LIB_NAME} STATIC
	${CORE_SOURCE_FILES} ${CORE_HEADER_FILES}
)

SET(LIB_OUTPUT_NAME ${LIB_NAME}${SAURON_OUTPUT_SUFFIX})

SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES
	ARCHIVE_OUTPUT_DIRECTORY ${SAURON_SKY_RENDERER_OUTPUT_DIR}
	ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${SAURON_SKY_RENDERER_OUTPUT_DIR}
	ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${SAURON_SKY_RENDERER_OUTPUT_DIR}
	ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO ${SAURON_SKY_RENDERER_OUTPUT_DIR}
	ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL ${SAURON_SKY_RENDERER_OUTPUT_DIR}
	PROJECT_LABEL ${LIB_NAME}
	DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX}
	OUTPUT_NAME ${LIB_OUTPUT_NAME}
)

TARGET_LINK_LIBRARIES(${LIB_NAME})

SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES FOLDER "ConceptValidation/SkyRenderer")
